# mariadb-dyncol

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  HISTORY.rst  LICENSE  MANIFEST.in  README.rst  benchmark.py  pyproject.toml  pytest.ini  requirements.in  requirements.txt  setup.cfg  setup.py  start.py  tox.ini
.github/workflows/: main.yml
.travis/: before_script.sh
mariadb_dyncol/: __init__.py  base.py
requirements/: py310.txt  py311.txt  py35.txt  py36.txt  py37.txt  py38.txt  py39.txt  requirements.in
src/mariadb_dyncol/: __init__.py  base.py
tests/: base.py  conftest.py  fuzztests.py  test_create.py  test_fuzzily_with_hypothesis.py  test_mariadb_dyncol.py
