[metadata]
name = mariadb-dyncol
version = 3.4.0
description = Pack/unpack Python dicts into/out of MariaDB's Dynamic Columns format.
long_description = file: README.rst
long_description_content_type = text/x-rst
author = Adam Johnson
author_email = me@adamj.eu
url = https://github.com/adamchainz/mariadb-dyncol
project_urls =
    Changelog = https://github.com/adamchainz/mariadb-dyncol/blob/main/HISTORY.rst
    Twitter = https://twitter.com/adamchainz
license = MIT
keywords = MariaDB
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
license_file = LICENSE

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.6
zip_safe = False

[options.packages.find]
where = src

[flake8]
max-line-length = 80
select = E,F,W,B,B950,C,I
ignore = E203,E501,W503
